# Shijima-NX

./: .gitmodules  CMakeLists.txt  README.md  build.sh  make-config.sh
.github/workflows/: build.yml
config-template/: mascot.cereal
source/: main.cc
tesla-packer/: CMakeLists.txt  main.cc
tesla-packer/tesla-packer/: CMakeLists.txt  packer.cc  packer.hpp
